<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ihearyou"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textColor="@color/yellow"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="4dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hey_you"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:id="@+id/Logo"
        android:src="@drawable/welcome"
        tools:ignore="ContentDescription"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/say_ssomething_to_me"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:textSize="15sp"
        android:layout_gravity="center"/>

    <ImageButton
        android:id="@+id/clickbutton"
        android:layout_width="118dp"
        android:layout_height="98dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/say_something"
        android:src="@drawable/my_icon"
        app:tint="@color/yellow"
        android:scaleType="centerInside"
        android:maxWidth="96dp"
        android:maxHeight="6dp"
        android:layout_gravity="center_horizontal"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ready_to_listen_to_you"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:textSize="15sp"
        android:layout_gravity="center"/>

</LinearLayout>